@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods
package "VFM System" {

title Domain Model - US028 and US029



class Collaborator {
}

class Agenda {
         duration
         vehicles
         equipment
         tasks
         status
         team
}

class ToDoEntry {
         greenSpace
         title
         description
         urgency
         expectedDuration
}





Collaborator "1" -- "*" ToDoEntry : lists >
Collaborator "1" - "1" ToDoEntry : registers task completion >
Agenda "1" -- "*" ToDoEntry : has >





@enduml